syntax = "proto3";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (User) {}
  rpc GetUsers (Empty) returns (UserList) {}
  rpc CreateUser (CreateUserRequest) returns (User) {}
}

message Empty {}

message GetUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string createdAt = 4;
}

message UserList {
  repeated User users = 1;
} 